# RealmWeaver

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: external.h  gemini_integration.h  pch.h
json/: npc.json  npcQuests.json  npcStats.json  stats.json
minigames/: gui.py  trial1.ipynb  trial1.py
minigames/src/: setup.py
minigames/src/Minigames/: g1_memoryCardMatching.cpp  g2_treasureHuntMaze.cpp  g3_wordScramble.cpp  g4_whackAMole.cpp  g5_archeryChallenge.cpp  g6_mazeRunner.cpp  g7_snakeGame.cpp  g8_temporalPuzzle.cpp
src/: main.cpp
src/core/: GameEngine.cpp  GameEngine.h
src/db/: gameSchema.sql
src/gemini/: Gemini.cpp  Gemini.h
src/item/: Item.cpp  Item.h
src/location/: Location.cpp  Location.h
src/npc/: NPC.cpp  NPC.h
src/player/: Player.cpp  Player.h
src/quest/: Quest.cpp  Quest.h
src/stats/: Stats.cpp  Stats.h
test/: npcGeneration.cpp  statsGeneration.cpp
